# MemSift

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
memsift/: __init__.py  __main__.py  cli.py
memsift/core/: __init__.py  analyzer.py  parser.py
memsift/plugins/: __init__.py  base.py  crypto.py  filesystem.py  injection.py  network.py  processes.py  registry.py  strings.py
memsift/utils/: __init__.py  output.py  patterns.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_cli.py  test_output.py  test_parser.py  test_patterns.py  test_plugins.py
