[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memsift"
version = "1.0.0"
description = "Memory Forensics and RAM Analysis Tool for Security Investigations"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MemSift Security", email = "memsift@example.com"}
]
keywords = [
    "memory-forensics",
    "security",
    "incident-response",
    "malware-analysis",
    "digital-forensics",
    "ram-analysis",
    "cybersecurity",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Forensics",
]
requires-python = ">=3.10"

[project.scripts]
memsift = "memsift.cli:main"

[project.urls]
Homepage = "https://github.com/memsift/memsift"
Documentation = "https://github.com/memsift/memsift#readme"
Repository = "https://github.com/memsift/memsift.git"
Issues = "https://github.com/memsift/memsift/issues"

[tool.setuptools.packages.find]
include = ["memsift*"]

[tool.setuptools.package-data]
memsift = ["py.typed"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
