[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memsift"
version = "1.0.0"
description = "Memory Forensics and RAM Analysis Tool for Security Investigations"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MemSift Security", email = "memsift@example.com"}
]
keywords = [
    "memory-forensics",
    "security",
    "incident-response",
    "malware-analysis",
    "digital-forensics",
    "ram-analysis",
    "cybersecurity",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Forensics",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
    "bandit>=1.7.0",
    "pip-audit>=2.6.0",
    "safety>=2.3.0",
]

[project.scripts]
memsift = "memsift.cli:main"

[project.urls]
Homepage = "https://github.com/memsift/memsift"
Documentation = "https://github.com/memsift/memsift#readme"
Repository = "https://github.com/memsift/memsift.git"
Issues = "https://github.com/memsift/memsift/issues"

[tool.setuptools.packages.find]
include = ["memsift*"]

[tool.setuptools.package-data]
memsift = ["py.typed"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow running",
    "unit: marks tests as unit tests (deselect with '-m \"not unit\"')",
]

[tool.coverage.run]
source = ["memsift"]
branch = true
omit = ["tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
show_missing = true

[tool.bandit]
targets = ["memsift"]
exclude_dirs = ["tests"]
skips = ["B101"]
